--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@ h1 {
   color:white;
 }
 body {
-background-image:url(../img/Steam.jpg);
+background-image:url(../img/steam.jpg);
 }
 p{
   color:white;
